--- a/src/app/components/bio/bio.component.html
+++ b/src/app/components/bio/bio.component.html
@@ -14,7 +14,7 @@
         I am part of the Compliance Team as a Full-Stack Developer Apprentice at
         <a href="https://www.bred.fr/index.html" target="_blank">BRED Banque Populaire</a>. I study Information Systems Engineering at the
         <a href="http://esipe.u-pec.fr/" target="_blank">École Supérieure d'Ingénieurs de Paris-Est Créteil</a>. I am engaged in
-        <a href="https://fac-creteil.fr/" targent="_blank">FAC</a>, the main student society of Université Paris-Est Créteil, as the Head of Entrepreneurship. 🚀
+        <a href="https://fac-creteil.fr/" targent="_blank">FAC</a>, the main student society of Université Paris-Est Créteil, as the VP Entrepreneurship. 🚀
       </p>
     </mat-card-content>
   </mat-card>
