--- a/src/app/components/bio/bio.component.html
+++ b/src/app/components/bio/bio.component.html
@@ -12,7 +12,13 @@
       </div>
       <div class="card-block">
         <div class="card-text">
-          ...
+          <h5>Bio</h5>
+          <h5>Interests</h5>
+          <span class="badge badge-1">DevOps</span>
+          <span class="badge badge-2">Cloud computing</span>
+          <span class="badge badge-3">Software development</span>
+          <span class="badge badge-4">Agile project management</span>
+          <span class="badge badge-5">Continuous delivery</span>
         </div>
       </div>
       <div class="card-footer">
