Add content in bio section

--- a/src/app/components/bio/bio.component.html
+++ b/src/app/components/bio/bio.component.html
@@ -6,13 +6,19 @@
           <img src="assets/evan_suau.jpg" alt="Evan Suau">
         </div>
         <div class="text-center">
-          Evan Suau<br/>
+          Evan Suau<br />
           <small>École Supérieure d'Ingénieurs de Paris-Est Créteil</small>
         </div>
       </div>
       <div class="card-block">
         <div class="card-text">
           <h5>Bio</h5>
+          <p>
+            I am part of the Compliance Team as a DevOps Engineer Apprentice at BRED Banque Populaire.
+            I study Information Systems Engineering at the École Supérieure d'Ingénieurs de Paris-Est Créteil.
+            I am engaged in FAC, the main student society of Université Paris-Est Créteil, as the VP Entrepreneurship.
+            🚀
+          </p>
           <h5>Interests</h5>
           <span class="badge badge-1">DevOps</span>
           <span class="badge badge-2">Cloud computing</span>
