Add links and occupations

--- a/src/app/components/bio/bio.component.html
+++ b/src/app/components/bio/bio.component.html
@@ -6,17 +6,23 @@
           <img src="assets/evan_suau.jpg" alt="Evan Suau">
         </div>
         <div class="text-center">
-          Evan Suau<br />
-          <small>École Supérieure d'Ingénieurs de Paris-Est Créteil</small>
+          <h3>Evan Suau</h3>
+          <small>DevOps Engineer Apprentice @ BRED Banque Populaire</small>
+          <br />
+          <small>Graduate Student @ École Supérieure d'Ingénieurs de Paris-Est Créteil</small>
         </div>
       </div>
       <div class="card-block">
         <div class="card-text">
           <h5>Bio</h5>
           <p>
-            I am part of the Compliance Team as a DevOps Engineer Apprentice at BRED Banque Populaire.
-            I study Information Systems Engineering at the École Supérieure d'Ingénieurs de Paris-Est Créteil.
-            I am engaged in FAC, the main student society of Université Paris-Est Créteil, as the VP Entrepreneurship.
+            I am part of the Compliance Team as a DevOps Engineer Apprentice at
+            <a href="https://www.bred.fr/index.html" target="_blank" rel="noopener noreferrer">BRED Banque Populaire</a>.
+            I study Information Systems Engineering at the
+            <a href="http://esipe.u-pec.fr/" target="_blank" rel="noopener noreferrer">École Supérieure d'Ingénieurs de
+              Paris-Est Créteil</a>.
+            I am engaged in <a href="https://fac-creteil.fr/" target="_blank" rel="noopener noreferrer">FAC</a>,
+            the main student society of Université Paris-Est Créteil, as the VP Entrepreneurship.
             🚀
           </p>
           <h5>Interests</h5>
