--- a/src/app/components/bio/bio.component.scss
+++ b/src/app/components/bio/bio.component.scss
@@ -1,11 +1,18 @@
+$accent-color: #d7d7d7;
+
 .card {
   margin-bottom: 20px;
+  margin-top: 60px;
   img {
+    background-color: $accent-color;
+    border: 1px solid $accent-color;
+    border-radius: 50%;
     height: 100px;
     width: 100px;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 20px;
+    margin-top: -70px;
   }
   .card-text {
     p {
