--- a/src/app/components/bio/bio.component.html
+++ b/src/app/components/bio/bio.component.html
@@ -1,5 +1,5 @@
 <div class="clr-row clr-justify-content-center">
-  <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
+  <div class="clr-col-lg-7 clr-col-md-12 clr-col-sm-12">
     <div class="card">
       <div class="card-header">
         <div class="card-img">
