--- a/src/app/components/bio/bio.component.html
+++ b/src/app/components/bio/bio.component.html
@@ -34,7 +34,7 @@
         </div>
       </div>
       <div class="card-footer">
-        <button class="btn btn-sm btn-link">Contact me</button>
+        <button class="btn btn-sm btn-link" routerLink="/contact">Contact me</button>
       </div>
     </div>
   </div>
