feat(bio): Update biography and job title

--- a/src/app/components/bio/bio.component.html
+++ b/src/app/components/bio/bio.component.html
@@ -7,21 +7,19 @@
         </div>
         <div class="text-center">
           <h3>Evan Suau</h3>
-          <small>DevOps Engineer Apprentice @ BRED Banque Populaire</small>
-          <br />
-          <small>Graduate Student @ École Supérieure d'Ingénieurs de Paris-Est Créteil</small>
+          <small>Software Engineer</small>
         </div>
       </div>
       <div class="card-block">
         <div class="card-text">
           <h5>Bio</h5>
           <p>
-            I am part of the Compliance Team as a DevOps Engineer Apprentice at
+            I have been a full-stack developer and DevOps engineer at
             <a href="https://www.bred.fr/index.html" target="_blank" rel="noopener noreferrer">BRED Banque Populaire</a>.
-            I study Information Systems Engineering at the
-            <a href="http://esipe.u-pec.fr/" target="_blank" rel="noopener noreferrer">École Supérieure d'Ingénieurs de
-              Paris-Est Créteil</a>.
-            I am engaged in <a href="https://fac-creteil.fr/" target="_blank" rel="noopener noreferrer">FAC</a>,
+            I have a M.S. in Information Systems engineering from 
+            <a href="http://esipe.u-pec.fr/" target="_blank" rel="noopener noreferrer">École Supérieure d'Ingénieurs de Paris-Est Créteil</a> 
+            with a specialization in Cloud computing.
+            I have been engaged in <a href="https://fac-creteil.fr/" target="_blank" rel="noopener noreferrer">FAC</a>,
             the main student society of Université Paris-Est Créteil, as the VP Entrepreneurship.
             🚀
           </p>
