--- a/src/app/components/bio/bio.component.html
+++ b/src/app/components/bio/bio.component.html
@@ -14,14 +14,29 @@
         <div class="card-text">
           <h5>Bio</h5>
           <p>
-            I have been a full-stack developer and DevOps engineer at
-            <a href="https://www.bred.fr/index.html" target="_blank" rel="noopener noreferrer">BRED Banque Populaire</a>.
-            I have a M.S. in Information Systems engineering from 
-            <a href="http://esipe.u-pec.fr/" target="_blank" rel="noopener noreferrer">École Supérieure d'Ingénieurs de Paris-Est Créteil</a> 
-            with a specialization in Cloud computing.
-            I have been engaged in <a href="https://fac-creteil.fr/" target="_blank" rel="noopener noreferrer">FAC</a>,
-            the main student society of Université Paris-Est Créteil, as the VP Entrepreneurship.
-            🚀
+            I am a software developer at
+            <a 
+              href="https://wholesale.banking.societegenerale.com/en/about/locations/worldwide-details/office/societe-generale-capital-canada-inc/"
+              target="_blank"
+              rel="noopener noreferrer">
+              Société Générale Corporate and Investment Banking</a> in Montreal, Canada.
+
+            <br />
+
+            Previously, I was a full-stack developer and a DevOps engineer at
+            <a
+              href="https://www.bred.fr/index.html"
+              target="_blank" 
+              rel="noopener noreferrer">BRED Banque Populaire</a> in Paris, France.
+
+            <br />
+
+            I have a M.E. in Information Systems engineering from
+            <a 
+              href="http://esipe.u-pec.fr/"
+              target="_blank" 
+              rel="noopener noreferrer">École Supérieure d'Ingénieurs de Paris-Est Créteil</a>
+            with a specialization in cloud computing.
           </p>
           <h5>Interests</h5>
           <span class="badge badge-1">DevOps</span>
