feat(bio): Use labels instead of badges

--- a/src/app/components/bio/bio.component.html
+++ b/src/app/components/bio/bio.component.html
@@ -17,11 +17,11 @@
             <app-bio-content></app-bio-content>
           </p>
           <h5>Interests</h5>
-          <span class="badge badge-1">DevOps</span>
-          <span class="badge badge-2">Cloud computing</span>
-          <span class="badge badge-3">Software development</span>
-          <span class="badge badge-4">Agile project management</span>
-          <span class="badge badge-5">Continuous delivery</span>
+          <span class="label clickable">Software development</span>
+          <span class="label label-purple clickable">Cloud computing</span>
+          <span class="label label-blue clickable">Continuous delivery</span>
+          <span class="label label-light-blue clickable">DevOps</span>
+          <span class="label label-orange clickable">Agile project management</span>
         </div>
       </div>
       <div class="card-footer">
