feat(model): Add model and data for bio

--- a/src/app/components/bio/bio.component.html
+++ b/src/app/components/bio/bio.component.html
@@ -7,7 +7,7 @@
         </div>
         <div class="text-center">
           <h3>Evan Suau</h3>
-          <small>Software Engineer</small>
+          <small id="bio-title">{{bio.title}}</small>
         </div>
       </div>
       <div class="card-block">
