--- a/src/app/components/bio/bio-content/bio-content.component.html
+++ b/src/app/components/bio/bio-content/bio-content.component.html
@@ -1,8 +1,5 @@
 I am a software developer at
-<a
-  href="https://wholesale.banking.societegenerale.com/en/about/locations/worldwide-details/office/societe-generale-capital-canada-inc/"
-  target="_blank"
-  rel="noopener noreferrer">
+<a href="https://americas.societegenerale.com/" target="_blank" rel="noopener noreferrer">
   Société Générale Corporate and Investment Banking
 </a>
 in Montreal, Canada.
@@ -10,21 +7,19 @@ in Montreal, Canada.
 <br />
 
 Previously, I was a full-stack developer and a DevOps engineer at
-<a
-  href="https://www.bred.fr/index.html"
-  target="_blank"
-  rel="noopener noreferrer">
+<a href="https://www.bred.fr/" target="_blank" rel="noopener noreferrer">
   BRED Banque Populaire
 </a>
 in Paris, France.
 
 <br />
 
-I have a M.E. in Information Systems engineering from
-<a
-  href="http://esipe.u-pec.fr/"
-  target="_blank"
-  rel="noopener noreferrer">
+I have a
+<a href="https://en.wikipedia.org/wiki/Dipl%C3%B4me_d%27Ing%C3%A9nieur" target="_blank" rel="noopener noreferrer">
+  French engineer's degree
+</a>
+in Information Systems from
+<a href="http://esipe.u-pec.fr/" target="_blank" rel="noopener noreferrer">
   École Supérieure d'Ingénieurs de Paris-Est Créteil
 </a>
-with a specialization in cloud computing.
+with a major in cloud computing.
